--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["next/babel"],
-    "plugins": [["styled-components", { "ssr": true }]]
+    "plugins": [["transform-define", "./env-config.js"],["styled-components", { "ssr": true }]]
 }
