--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.11.1",
+    "babel-plugin-transform-define": "^2.0.0",
     "eslint": "^7.13.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
     "prettier": "2.1.2"
   }
 }
